# Algorithms

./: .gitignore  CMakeLists.txt  README.md  commands.sh
Assignment0/: lab01.tex
Assignment1/: CMakeLists.txt  assignment1.tex  main.cpp  makefile  node.hpp  queue.hpp  stack.hpp
Assignment2/: CMakeLists.txt  assignment2.tex  debug.txt  hashtable.cpp  hashtable.hpp  main.cpp  makefile  node.hpp  queue.hpp
Assignment3/: CMakeLists.txt  assignment3.tex  binary_search_tree.cpp  binary_search_tree.hpp  graph.hpp  main.cpp  makefile
Assignment4/: CMakeLists.txt  assignment4.tex  graph.hpp  graphs2.txt  main.cpp  makefile  spice.hpp
Tests/: CMakeLists.txt  main.cpp
include/: node.hpp  queue.hpp  stack.hpp
